# app-server

./: AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
app_server/: app.py  auth.py  config.py  models.py  runtime.py  sandbox.py  state.py  temporary_settings.py
docs/: implementation-plan.md
tests/: conftest.py  test_auth.py  test_conversations.py  test_docker_sandbox_service.py  test_proxy_routes.py  test_sandboxes.py  test_settings_secrets_temp.py  test_websocket_gateways.py
