[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minimal-openhands-app-server"
version = "0.1.0"
description = "Minimal OpenHands app_server control plane for Agent Canvas and agent-server runtimes"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dependencies = [
  "fastapi>=0.115,<1",
  "httpx>=0.27,<1",
  "pydantic>=2.7,<3",
  "uvicorn[standard]>=0.30,<1",
  "docker>=7,<8",
  "websockets>=13,<16",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
  "pytest-asyncio>=0.23,<2",
  "ruff>=0.8,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app_server"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["B008"]
